splash-screen z-index fixed

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -51,4 +51,5 @@
   font-size: 40px;
   animation: hideSplashScreen 0.3s ease-in-out forwards;
   animation-delay: 0.5s;
+  z-index: 3;
 }
